--- a/findmore.html
+++ b/findmore.html
@@ -65,83 +65,83 @@
   <h1>Up Coming Events</h1>
 <div class="flex-container">
   <div> 
-  <img src="D:\webdesigning\images\upcoming.jpg">   
+  <img src="images\upcoming.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p>
   </div>
-  <div><img src="D:\webdesigning\images\upcoming2.jpg">   
+  <div><img src="images\upcoming2.jpg">   
     <h2>Harsh Gujral Live on Screens near you</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>
-  <div><img src="D:\webdesigning\images\upcoming3.jpg">   
+  <div><img src="images\upcoming3.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>
-  <div><img src="D:\webdesigning\images\upcoming4.jpg">   
+  <div><img src="images\upcoming4.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>  
-  <div><img src="D:\webdesigning\images\upcoming5.jpg">   
+  <div><img src="images\upcoming5.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>  
-  <div><img src="D:\webdesigning\images\upcoming6.jpg">   
+  <div><img src="images\upcoming6.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>  
-  <div><img src="D:\webdesigning\images\upcoming7.jpg">   
+  <div><img src="images\upcoming7.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming8.jpg">   
+      <div><img src="images\upcoming8.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming9.jpg">   
+      <div><img src="images\upcoming9.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming10.jpg">   
+      <div><img src="images\upcoming10.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming11.jpg">   
+      <div><img src="images\upcoming11.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming12.jpg">   
+      <div><img src="images\upcoming12.jpg">   
     <h2>Free Musical Open Mic</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div> 
-      <div><img src="D:\webdesigning\images\upcoming13.jpg">   
+      <div><img src="images\upcoming13.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>
-      <div><img src="D:\webdesigning\images\upcoming14.jpg">   
+      <div><img src="images\upcoming14.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>
-      <div><img src="D:\webdesigning\images\upcoming15.jpg">   
+      <div><img src="images\upcoming15.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
       81/82, Pyramid Complex, N Main Rd, Koregaon Park Annexe, Koregaon Park, Pune, Maharashtra 411036, India <h4>₹500.</h4></p></div>
-      <div><img src="D:\webdesigning\images\upcoming1.jpg">   
+      <div><img src="images\upcoming1.jpg">   
     <h2>King Fireworks Tour</h2>
     <p>
       <b>Venue Waters</b> : Bar & Kitchen
